Project2/force-app/main/default/objects/Sprites__c/Sprites__c.object-meta.xml
<CustomObject>
    <label>Sprites</label>
    <nameField>
        <label>Sprites Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>