Project2/force-app/main/default/objects/Sprites__c/fields/Back_Default__c.field-meta.xml
<CustomField>
    <fullName>Back_Default__c</fullName>
    <label>Back Default</label>
    <length>100</length>
    <type>Text</type>
</CustomField>