Project2/force-app/main/default/objects/Sprites__c/fields/Back_Female__c.field-meta.xml
<CustomField>
    <fullName>Back_Female__c</fullName>
    <label>Back Female</label>
    <length>100</length>
    <type>Text</type>
</CustomField>