Project2/force-app/main/default/objects/Sprites__c/fields/Back_Shiny__c.field-meta.xml
<CustomField>
    <fullName>Back_Shiny__c</fullName>
    <label>Back Shiny</label>
    <length>100</length>
    <type>Text</type>
</CustomField>