Project2/force-app/main/default/objects/Sprites__c/fields/Front_Default__c.field-meta.xml
<CustomField>
    <fullName>Front_Default__c</fullName>
    <label>Front Default</label>
    <length>100</length>
    <type>Text</type>
</CustomField>