Project2/force-app/main/default/objects/Sprites__c/fields/Front_Female__c.field-meta.xml
<CustomField>
    <fullName>Front_Female__c</fullName>
    <label>Front Female</label>
    <length>100</length>
    <type>Text</type>
</CustomField>