Project2/force-app/main/default/objects/Sprites__c/fields/Front_Shiny__c.field-meta.xml
<CustomField>
    <fullName>Front_Shiny__c</fullName>
    <label>Front Shiny</label>
    <length>100</length>
    <type>Text</type>
</CustomField>