Project2/force-app/main/default/objects/Sprites__c/fields/Pokemon__c.field-meta.xml
<CustomField>
    <fullName>Pokemon__c</fullName>
    <label>Pokemon</label>
    <referenceTo>Pokemon__c</referenceTo>
    <relationshipLabel>Sprites</relationshipLabel>
    <relationshipName>Sprites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>